#1004 - Prajakta - Book details UI alignment fixed.

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -10,22 +10,14 @@
   height: 130px;
 }
 
-#borrow_book {
-  border-radius: 7px;
-  background-color: #E6E6E6;
-}
-
-.book_profile {
-  align-self: center;
-  width: 50%;
-  height: 350px;
-  margin-left: 20%;
+.book-image {
+  margin-left: 5%;
   margin-top: 10%;
-  align-items: center;
 }
 
 .book_metadata {
-  float: left;
+  float: center;
+  margin-left: 50%;
   margin-top: 80px;
 }
 
@@ -41,4 +33,25 @@
   height: 300px;
   float: left;
   margin: 10px 50px 10px 10px;
+}
+
+.borrow_button {
+  margin-top: 15%;
+}
+
+.btn.btn-success {
+  width: 30%;
+}
+
+#borrow_book {
+  border-color: #dddddd;
+  background-color: #E6E6E6;
+  color: #07c;;
+  font-family: Arial, sans-serif;
+  font-size: 110%;
+}
+
+#borrow_book:hover {
+  border-color: #D1D1D1;
+  background-color: #f5f5f5;
 }
